--- a/JsonToCsv.ipynb
+++ b/JsonToCsv.ipynb
@@ -51,8 +51,8 @@
    },
    "outputs": [],
    "source": [
-    "jsonPath = 'Json_data'\n",
-    "csvPath = 'csv_data'\n",
+    "jsonPath = 'data\\Json_data'\n",
+    "csvPath = 'data\\csv_data'\n",
     "\n",
     "#Store all json files in a list\n",
     "jsonList =os.listdir(path=jsonPath)"
