--- a/CombineDataset.ipynb
+++ b/CombineDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "0e4b335b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "471701e0",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "10d2df09",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "99456c2e",
    "metadata": {},
    "outputs": [],
@@ -47,18 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "c645e4ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "combined = pd.concat(dflist, axis = 1)\n",
-    "combined.dropna(inplace = True)\n"
+    "combined.dropna(inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "10f69c7c",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "5557ce07",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "06887936",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,25 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "04981716",
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined.to_csv('csv_combined2.csv')"
+    "result.to_csv('csv_combined2.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab534e70",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "id": "9ecc7340",
    "metadata": {},
    "outputs": [
@@ -183,7 +175,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,14 +183,6 @@
    "source": [
     "type(combined)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec08078c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
